[tool.poetry]
name = "picad"
version = "0.1.5"
description = "Python package for reading and writing KiCad 6+ S-expression files, no dependency on KiCad"
authors = ["wideopentech <fossie@wideoppentech.co.uk>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/wideopensource/picad"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
john = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
